# KvantEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  basic_rendering.cpp  empty_app.cpp
src/: Kvant.hpp
src/backends/blueprints/: Graphics.hpp  Platform.hpp
src/backends/opengl/: Opengl.cpp  Opengl.hpp  OpenglBuffer.hpp  OpenglShader.hpp  OpenglSurface.hpp
src/backends/sdl2/: imgui_impl_sdl.cpp  imgui_impl_sdl.h  sdl2.cpp  sdl2.hpp
src/core/: Animation.cpp  Animation.hpp  App.hpp  Camera.hpp  Constants.hpp  Context.hpp  Drawable.hpp  Drivers.cpp  Drivers.hpp  Extensions.hpp  Loader.cpp  Loader.hpp  Mesh.hpp  Renderer.hpp  Scene.hpp  Screen.hpp  Shaders.hpp  Traits.hpp
src/imgui/: imgui_kvant.cpp  imgui_kvant.hh
src/utils/: Checks.hpp  Logger.hpp  Math.hpp
